--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="js-weather">
       <div class="weather"></div>
-      <div class="geo"></div>
+      <div class="place"></div>
     </div>
     <div class="js-clock"></div>
     <div class="js-usrName">
