1200자 제한 추가

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       <form>이름<input type='text'name='name'></form>
       <form>수신인과의 관계<input type='text'name='relation'></form>
       <form>제목<input type='text'name='title'></form>
-      <form><textarea class='content' name='content'></textarea></form>
+      <form><textarea class='content' name='content'>1200자 미만</textarea></form>
       <form>비밀번호<input type='text'name='pw'></form>
       <form class='submitBtn-container'><input class='submitBtn' type='button' value='📬'></form>
     </div>
