unify in a form,title align,body resize

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <div class='title'>
       <h1>규원이의 큣트큐트한 인터넷 편지,,,💌</h1>
     </div>
-    <div class='mail-container'>
-      <form>이름<input type='text'name='name'></form>
-      <form>수신인과의 관계<input type='text'name='relation'></form>
-      <form>제목<input type='text'name='title'></form>
-      <form><textarea class='content' name='content'>1200자 미만</textarea></form>
-      <form>비밀번호<input type='text'name='pw'></form>
-      <form class='submitBtn-container'><input class='submitBtn' type='button' value='📬'></form>
+    <div>
+      <form class='mail-container'>
+        <div>이름<input type='text'name='name'></div>
+        <div>수신인과의 관계<input type='text'name='relation'></div>
+        <div>제목<input type='text'name='title'></div>
+        <div><textarea class='content' name='content'>1200자 미만</textarea></div>
+        <div>비밀번호<input type='text'name='pw'></div>
+        <div class='submitBtn-container'><input class='submitBtn' type='button' value='📬'></div>
+      </form>
     </div>
     <link rel="stylesheet" href="css/style.css">
   </body>
